Fix background colour in dark mode

--- a/src/frontend/app/components/LineIcon.css
+++ b/src/frontend/app/components/LineIcon.css
@@ -55,8 +55,9 @@
   font-weight: 600;
   text-transform: uppercase;
   color: inherit;
-  background-color: white;
   border-radius: 0.25rem 0.25rem 0 0;
+
+  background-color: var(--background-color);
 }
 
 .line-c1 {
